完善zuul route admin对路由规则的管理功能

--- a/itopener-parent/tools-parent/tools-zuul-route-admin-parent/tools-zuul-route-admin-view/src/main/resources/static/routeindex.html
+++ b/itopener-parent/tools-parent/tools-zuul-route-admin-parent/tools-zuul-route-admin-view/src/main/resources/static/routeindex.html
@@ -84,6 +84,10 @@
 			name: '路由配置管理',
 			icon: 'fa-tachometer',
 			url: 'views/route.html'
+		},{
+			name: '路由规则管理',
+			icon: 'fa-tachometer',
+			url: 'views/rule.html'
 		}];
 		
 		function renderMenu(menus, ele){
