修改zuul动态路由配置的sql

--- a/itopener-parent/tools-parent/tools-zuul-route-admin-parent/tools-zuul-route-admin-view/src/main/resources/static/login.html
+++ b/itopener-parent/tools-parent/tools-zuul-route-admin-parent/tools-zuul-route-admin-view/src/main/resources/static/login.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>运输管理系统-TMS-itopener.com</title>
-	<meta name="description" content="运输管理系统-TMS-itopener.com">
+	<title>运ZUUL动态路由管理-itopener.com</title>
+	<meta name="description" content="ZUUL动态路由管理-itopener.com">
 	<meta name="keywords" content="index">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="renderer" content="webkit">
@@ -38,7 +38,7 @@
 <div id="particles"></div>
 <div class="am-login-header am-text-center am-margin-top-lg">
 	<div class="am-g">
-		<h1>运输管理系统（TMS）</h1>
+		<h1>ZUUL动态路由管理</h1>
 		<p>itopener.com</p>
 	</div>
 	<hr />
